--- a/app/src/main/res/layout/activity_get.xml
+++ b/app/src/main/res/layout/activity_get.xml
@@ -10,46 +10,48 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".HomeActivity">
+        tools:context=".GetActivity">
 
-        <Button
-            android:id="@+id/add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add data"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="20dp"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <Button
-            android:id="@+id/get"
-            android:layout_width="wrap_content"
+        <EditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="50dp"
+            android:hint="Enter Username"
             android:layout_margin="20dp"
-            android:text="get data"/>
+            android:id="@+id/username"/>
         <Button
-            android:id="@+id/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="get data"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/get"
-            android:layout_margin="20dp"
-            android:text="delete data"/>
-        <Button
-            android:id="@+id/update"
+            app:layout_constraintTop_toBottomOf="@id/username"
+            android:id="@+id/get_btn"
+            android:layout_marginTop="10dp"/>
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/delete"
-            android:layout_margin="20dp"
-            android:text="update data"/>
-
-
+            app:layout_constraintTop_toBottomOf="@id/get_btn"
+            android:text="Name : "
+            android:textColor="@color/black"
+            android:layout_marginTop="20dp"
+            android:id="@+id/name"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/name"
+            android:id="@+id/contact"
+            android:textColor="@color/black"
+            android:text="Contact : "
+            android:layout_marginTop="25dp"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
